rgw: work around curl_multi_wait bug with non-blocking reads

Fixes: http://tracker.ceph.com/issues/15915
Fixes: http://tracker.ceph.com/issues/16695

Signed-off-by: Casey Bodley <cbodley@redhat.com>